# backup_manager

./: .gitignore  README.md  go.mod  go.sum  main.go  pyproject.toml  requirements.in  requirements.txt  requirements_dev.txt  requirements_test.in  requirements_test.txt  run-tests.sh  run_tests.sh  setup.py
backup_manager/: main.py
backupmanager/: backupmanager.py  main.py  utils.py
backupmanager/integration_tests/: README.md  int_test_utils.py  it_base.py  test_backupmanager.py  test_utils.py
backupmanager/integration_tests/docker/: Dockerfile
backupmanager/lib/: backupmanager.py  rsync.py  utils.py
backupmanager/lib/integration_tests/docker/: Dockerfile
backupmanager/resources/: .backup_manager.yaml.swp  backup_manager.yaml
backupmanager/resources/drawio/: backupmanager-overview.drawio  backupmanager-process-flow.drawio
backupmanager/tests/: test_utils.py
integration_tests/: envvar_cfgs.go  resource_manager.go
integration_tests/docker/: Dockerfile
integration_tests/envvars/: envvars.go
run/: run.go
